--- a/charts/sonarqube/values.yaml
+++ b/charts/sonarqube/values.yaml
@@ -282,7 +282,11 @@ emptyDir: {}
 
 # A custom sonar.properties file can be provided via dictionary.
 # For example:
-# sonarProperties:
+sonarProperties:
+  sonar.core.serverBaseURL: "<url>"
+
+  # Mitigate Log4J2 vulnerability take a look at: https://community.sonarsource.com/t/sonarqube-sonarcloud-and-the-log4j-vulnerability/54721
+  sonar.search.javaAdditionalOpts: "-Dlog4j2.formatMsgNoLookups=true"
 #   sonar.forceAuthentication: true
 #   sonar.security.realm: LDAP
 #   ldap.url: ldaps://organization.com
